# parquetpp-native

./: .gitignore  Cargo.toml  README.md
macos/: Info.plist  launcher.sh
scripts/: package_macos_app.sh
src/: app.rs  db.rs  main.rs
